# camkes

./: .gitignore  .licenseignore  CMakeLists.txt  Kconfig  LICENSE_BSD2.txt  LICENSE_GPLv2.txt  Makefile  README  README.md  compile_all.sh  easy-settings.cmake  settings.cmake
apps/: rumprun_common.cmake
apps/adder/: CMakeLists.txt  Kbuild  Kconfig  Makefile  README  README.md  adder.camkes  adder.tcl  arm-adder.tcl  x86-adder.tcl
apps/adder/components/Adder/: Adder.camkes  CMakeLists.txt
apps/adder/components/Adder/include/: payload.h
apps/adder/components/Adder/src/: adder.c
apps/adder/components/Client/: CMakeLists.txt  Client.camkes
apps/adder/components/Client/include/: payload.h
apps/adder/components/Client/src/: client.c
apps/adder/interfaces/: Addition.idl4
apps/cakeml_hello/: CMakeLists.txt  README.md  cakeml_hello.camkes  cakeml_hello.tcl  client.c  componentScript.sml
apps/cakeml_regex/: CMakeLists.txt  README.md  cakeml_regex.camkes
apps/cakeml_regex/components/CakeMLFilter/: CakeMLFilter.camkes  componentScript.sml  emit_string.c  filterProgScript.sml
apps/cakeml_regex/components/Consumer/: Consumer.camkes  consumer.c
apps/cakeml_regex/components/Producer/: Producer.camkes  producer.c
apps/cakeml_regex/interfaces/: TransferString.idl4
apps/cakeml_tipc/: CMakeLists.txt  README.md  cakeml_tipc.camkes  cakeml_tipc.tcl
apps/cakeml_tipc/components/cakeml-filter/: componentScript.sml  global_endpoint.c
apps/cakeml_tipc/components/client/: client.c
apps/global-imports/: CMakeLists.txt  Kbuild  Kconfig  Makefile  arm-global-imports.tcl  global-imports.camkes  global-imports.tcl  x86-global-imports.tcl
apps/global-imports/components/Client/: Client.camkes
apps/global-imports/components/Client/src/: main.c
apps/global-imports/global/: CMakeLists.txt
apps/global-imports/global/components/Printer/: CMakeLists.txt  Makefile  Printer.camkes  Printer.mk
apps/global-imports/global/components/Printer/src/: main.c
apps/global-imports/global/components/Server/: CMakeLists.txt  Makefile  Server.camkes  Server.mk
apps/global-imports/global/components/Server/src/: main.c
apps/global-imports/global/components/common_port_types/: shared_int.h
apps/global-imports/global/interfaces/: string_getter.idl4  string_printer.idl4
apps/global-imports/global/interfaces/GetterIface/: CMakeLists.txt  GetterIface.camkes  GetterIface.mk
apps/global-imports/global/interfaces/PrinterIface/: CMakeLists.txt  PrinterIface.camkes  PrinterIface.mk
apps/global-imports/global/interfaces/PrinterIface/include/: vector.h
apps/global-imports/global/interfaces/SharedInt/: SharedInt.mk
apps/global-imports/global/interfaces/common_procedure_types/: vec.h
apps/hellorust/components/main/: Cargo.toml  Xargo.toml  main.camkes
apps/hellorust/components/main/src/: run.rs
apps/hellorust_std/components/main/: Cargo.toml  Xargo.toml
apps/hellorust_std/components/main/src/: run.rs
apps/lwipserver2/: CMakeLists.txt  lwipserver2_imx8mm.camkes  lwipserver2_x86_64.camkes  settings.cmake  x86_64_eth_init.c
apps/lwipserver2/include/echo/: tuning_params.h
apps/lwipserver2/lwip_include/: lwipopts.h
apps/lwipserver2/src/: ports.h  tcp_echo_socket.c  udp_echo_socket.c  utilization_socket.c
apps/rumprun_ethernet/components/rump_ether/: CMakeLists.txt  rump_ether.camkes  rump_ether.mk  tcp_server.c
cms-donate/: Kbuild  Kconfig  Makefile  cms-donate.camkes
configs/: arm_adder_defconfig  arm_attributes_defconfig  arm_binary_semaphore_defconfig  arm_cached_hardware_dataport_defconfig  arm_dataport_defconfig  arm_dhcp_defconfig  arm_dmaexample_defconfig  arm_dmaexample_largeframe_defconfig  arm_epit_defconfig  arm_event_defconfig  arm_exchangestring_defconfig  arm_filter_defconfig  arm_global_imports_defconfig  arm_hierarchical_attributes_defconfig  arm_hierarchical_components_defconfig  arm_lockserver_defconfig  arm_multiassembly_defconfig  arm_multiclient_defconfig  arm_multiplier_defconfig  arm_mutex_defconfig  arm_reversestring_defconfig  arm_rotate_defconfig  arm_simple_defconfig  arm_simple_verification_defconfig  arm_simplesingleaddressspace_defconfig  arm_socket_defconfig  arm_structs_defconfig  arm_swapcounter_defconfig  arm_terminal_defconfig  arm_testbufvariant_defconfig  arm_testcamkes438_defconfig  arm_testcontrolname_defconfig  arm_testdataportbifurcate_defconfig  arm_testdataportmux_defconfig  arm_testdataportmuxflat_defconfig  arm_testdataportptrwrap_defconfig  arm_testdataportrpc_defconfig  arm_testfaulthandlers_defconfig  arm_testgrouping_defconfig  arm_testgroupingcontrol_defconfig  (+79 more)
cs-donate/: Kbuild  Kconfig  Makefile  cs-donate.camkes
cs-nodonate/: Kbuild  Kconfig  Makefile  cs-nodonate.camkes
event-driven/: Kbuild  Kconfig  Makefile  event-driven.camkes
event-driven-donate/: Kbuild  Kconfig  Makefile  event-driven-donate.camkes
libs/libsel4bga/: CMakeLists.txt  Kbuild  Kconfig  Makefile  README
libs/libsel4bga/arch_include/x86/bga/: bga.h
libs/libsel4bga/src/arch-x86/: bga.c
libs/libsel4keyboard/: CMakeLists.txt  Kbuild  Makefile  README  README.md
libs/libsel4keyboard/arch_include/x86/keyboard/: keyboard.h
libs/libsel4keyboard/include/keyboard/: codes.h
libs/libsel4keyboard/src/: codes.c
libs/libsel4keyboard/src/arch-x86/: keyboard.c
mcs-donate/: Kbuild  Kconfig  Makefile  mcs-donate.camkes
mcs-nodonate/: Kbuild  Kconfig  Makefile  mcs-nodonate.camkes
periodic/: Kbuild  Kconfig  Makefile  periodic.camkes
tests/: .gitignore  CMakeLists.txt  Makefile  arm-adder.tcl  arm-attributes.tcl  arm-binary-semaphore.tcl  arm-cached-hardware-dataport.tcl  arm-dataport.tcl  arm-dhcp.tcl  arm-dmaexample-largeframe.tcl  arm-dmaexample.tcl  arm-epit.tcl  arm-event.tcl  arm-exchangestring.tcl  arm-filter.tcl  arm-global-imports.tcl  arm-hierarchical-attributes.tcl  arm-hierarchical-components.tcl  arm-lockserver.tcl  arm-multiassembly.tcl  arm-multiclient.tcl  arm-multiplier.tcl  arm-mutex.tcl  arm-reversestring.tcl  arm-rotate.tcl  arm-simple.tcl  arm-simplesingleaddressspace.tcl  arm-socket.tcl  arm-structs.tcl  arm-terminal.tcl  (+116 more)
(+963 files in other folders)
