#
# Copyright 2018, Data61
# Commonwealth Scientific and Industrial Research Organisation (CSIRO)
# ABN 41 687 119 230.
#
# This software may be distributed and modified according to the terms of
# the BSD 2-Clause license. Note that NO WARRANTY is provided.
# See "LICENSE_BSD2.txt" for details.
#
# @TAG(DATA61_BSD)
#

[package]
name = "main"
version = "0.0.1"
authors = ["Kent McLeod <kent.mcleod@data61.csiro.au>"]
description = "Sample rust hello world on camkes"

[lib]
name = "main"
path = "src/run.rs"
crate-type = ["staticlib"]

[dependencies]
lazy_static = "1.0"
spin = "0.4.8"
libc = "0.2.42"

[dependencies.smoltcp]
default-features = false
version = "0.4"
features = ["proto-ipv4"]
git = "https://github.com/GaloisInc/smoltcp"
branch = "master"

[profile.release]
panic = "abort"
