#
# Copyright 2018, Data61
# Commonwealth Scientific and Industrial Research Organisation (CSIRO)
# ABN 41 687 119 230.
#
# This software may be distributed and modified according to the terms of
# the BSD 2-Clause license. Note that NO WARRANTY is provided.
# See "LICENSE_BSD2.txt" for details.
#
# @TAG(DATA61_BSD)
#

cmake_minimum_required(VERSION 3.7.2)

project(reverse C)

add_compile_options("-I${CMAKE_CURRENT_SOURCE_DIR}/../../include")
add_executable(reverse tcp_server.c)

install(TARGETS reverse RUNTIME DESTINATION bin)
